--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,13 +5,12 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04  # Updated to use Ubuntu 22.04
+    runs-on: ubuntu-22.04  # Ensure you're using a supported OS
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Used to cache dependencies with a timeout
       - name: Get Date
         id: get-date
         run: |
@@ -19,13 +18,13 @@ jobs:
         shell: bash
 
       - name: Cache Buildozer global directory
-        uses: actions/cache@v3  # Updated to use actions/cache@v3
+        uses: actions/cache@v3  # Ensure you're using the latest version
         with:
           path: .buildozer_global
-          key: buildozer-global-${{ hashFiles('buildozer.spec') }} # Replace with your path
+          key: buildozer-global-${{ hashFiles('buildozer.spec') }}
 
       - name: Cache Buildozer directory
-        uses: actions/cache@v3  # Updated to use actions/cache@v3
+        uses: actions/cache@v3  # Ensure you're using the latest version
         with:
           path: .buildozer
           key: ${{ runner.os }}-${{ steps.get-date.outputs.date }}-${{ hashFiles('buildozer.spec') }}
@@ -38,7 +37,7 @@ jobs:
           buildozer_version: stable
 
       - name: Upload artifacts
-        uses: actions/upload-artifact@v3  # Updated to use actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4  # Updated to use actions/upload-artifact@v4
         with:
           name: package
           path: ${{ steps.buildozer.outputs.filename }}
