--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,11 @@ jobs:
           echo "date=$(date -u '+%Y%m%d')" >> $GITHUB_OUTPUT
         shell: bash
 
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y git unzip openjdk-17-jdk python3-pip autoconf libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo5 cmake libffi-dev libssl-dev
+
       - name: Cache Buildozer global directory
         uses: actions/cache@v3
         with:
@@ -38,12 +43,15 @@ jobs:
       - name: Build with Buildozer
         uses: ArtemSBulgakov/buildozer-action@v1
         id: buildozer
+        env:
+          APP_ANDROID_ACCEPT_SDK_LICENSE: 1  # Auto-accept SDK licenses
         with:
           command: buildozer android debug
           buildozer_version: stable
 
       - name: Upload APK artifact
+        if: success()  # Only upload if build succeeds
         uses: actions/upload-artifact@v4
         with:
-          name: package
-          path: ${{ steps.buildozer.outputs.filename }}
+          name: myapp-${{ steps.get-date.outputs.date }}.apk
+          path: bin/*.apk  # Explicit path to APK
