--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,9 +21,6 @@ jobs:
       with:
         python-version: 3.11
 
-    - name: Accept Android SDK licenses
-      run: yes | sdkmanager --licenses
-
     - name: Install dependencies
       run: |
         sudo apt-get update
@@ -71,6 +68,22 @@ jobs:
           libssl-dev
         python -m pip install --upgrade pip
         pip install --upgrade buildozer cython python-for-android
+
+    - name: Setup Android SDK
+      run: |
+        mkdir -p $HOME/Android/Sdk
+        cd $HOME/Android/Sdk
+        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+        unzip cmdline-tools.zip
+        mkdir -p cmdline-tools/latest
+        mv cmdline-tools/* cmdline-tools/latest/
+        export ANDROID_SDK_ROOT=$HOME/Android/Sdk
+        export PATH=$PATH:$ANDROID_SDK_ROOT/cmdline-tools/latest/bin
+        yes | sdkmanager --licenses
+        sdkmanager "platform-tools" "platforms;android-28" "build-tools;28.0.3"
+
+    - name: Accept Android SDK licenses
+      run: yes | sdkmanager --licenses
     - name: Install python-for-android explicitly
       run: |
         pip install --upgrade python-for-android
