--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,23 +16,19 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Set up Python 3.11
+    - name: Set up Python 3.10
       uses: actions/setup-python@v4
       with:
-        python-version: "3.11"
+        python-version: "3.10.10"
 
     - name: Install system dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y \
           build-essential \
-          autoconf \
-          automake \
-          libtool \
-          pkg-config \
           libffi-dev \
           libssl-dev \
-          openjdk-11-jdk \
+          openjdk-8-jdk \
           unzip \
           zip \
           zlib1g-dev \
@@ -40,15 +36,12 @@ jobs:
           libsqlite3-dev \
           libbz2-dev \
           liblzma-dev \
-          libreadline-dev \
-          libgdbm-dev \
-          libncursesw5-dev \
-          libexpat1-dev
+          libncursesw5-dev
 
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install --upgrade buildozer cython python-for-android
+        pip install --upgrade buildozer cython==0.29.36 python-for-android
 
     - name: Setup Android SDK
       run: |
@@ -61,14 +54,14 @@ jobs:
         export ANDROID_SDK_ROOT=$HOME/Android/Sdk
         export PATH=$PATH:$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools
         yes | sdkmanager --licenses
-        sdkmanager "platform-tools" "platforms;android-33" "build-tools;34.0.0"
+        sdkmanager "platform-tools" "platforms;android-28" "build-tools;28.0.3"
         sdkmanager --install "ndk;25.2.9519653"
 
     - name: Build APK
       run: |
         export ANDROID_SDK_ROOT=$HOME/Android/Sdk
         export ANDROID_NDK_HOME=$HOME/Android/Sdk/ndk/25.2.9519653
-        buildozer init
+        buildozer -v android clean
         buildozer -v android debug
 
     - name: Upload APK artifact
