--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,10 +16,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Set up Python 3.11
+    - name: Set up Python 3.10
       uses: actions/setup-python@v4
       with:
-        python-version: 3.11
+        python-version: "3.10.10"
 
     - name: Install system dependencies
       run: |
@@ -37,13 +37,14 @@ jobs:
           libbz2-dev \
           liblzma-dev \
           libncursesw5-dev \
-          git
+          git \
+          python3-venv
 
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install --upgrade buildozer cython==0.29.36
-        pip install python-for-android==2023.8.17
+        pip install python-for-android==2023.9.16  # Updated to available version
 
     - name: Setup Android SDK and NDK
       run: |
