--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,11 +2,9 @@ name: Build APK
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   pull_request:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   build-apk:
@@ -15,6 +13,13 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+
+    - name: Increase swap space
+      run: |
+        sudo fallocate -l 4G /swapfile
+        sudo chmod 600 /swapfile
+        sudo mkswap /swapfile
+        sudo swapon /swapfile
 
     - name: Set up Python 3.10
       uses: actions/setup-python@v4
@@ -28,25 +33,25 @@ jobs:
           build-essential \
           libffi-dev \
           libssl-dev \
-          openjdk-8-jdk \
+          openjdk-11-jdk \
           unzip \
           zip \
           zlib1g-dev \
           libstdc++6 \
           libsqlite3-dev \
-          libbz2-dev \
-          liblzma-dev \
           libncursesw5-dev \
           git \
-          python3-venv
+          python3-venv \
+          cmake \
+          ninja-build
 
     - name: Install Python dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install --upgrade buildozer cython==0.29.36
-        pip install python-for-android==2023.9.16  # Updated to available version
+        python -m pip install --upgrade pip wheel setuptools
+        pip install buildozer cython==0.29.36
+        pip install python-for-android==2023.9.16
 
-    - name: Setup Android SDK and NDK
+    - name: Setup Android SDK
       run: |
         mkdir -p $HOME/Android/Sdk
         cd $HOME/Android/Sdk
@@ -54,24 +59,35 @@ jobs:
         unzip cmdline-tools.zip -d cmdline-tools
         rm cmdline-tools.zip
         mv cmdline-tools/cmdline-tools cmdline-tools/latest
+        
         export ANDROID_SDK_ROOT=$HOME/Android/Sdk
         export PATH=$PATH:$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools
-        yes | sdkmanager --licenses
-        sdkmanager "platform-tools" "platforms;android-28" "build-tools;28.0.3"
+        
+        # Create repositories.cfg if it doesn't exist
+        mkdir -p $HOME/.android
+        touch $HOME/.android/repositories.cfg
+        
+        # Accept licenses non-interactively
+        yes | sdkmanager --licenses || true
+        
+        # Install required components
+        sdkmanager "platform-tools" "platforms;android-33" "build-tools;34.0.0"
         sdkmanager --install "ndk;25.2.9519653"
-        export ANDROID_NDK_HOME=$HOME/Android/Sdk/ndk/25.2.9519653
+        sdkmanager --install "cmake;3.22.1"
+
+    - name: Configure environment
+      run: |
+        echo "ANDROID_SDK_ROOT=$HOME/Android/Sdk" >> $GITHUB_ENV
+        echo "ANDROID_NDK_HOME=$HOME/Android/Sdk/ndk/25.2.9519653" >> $GITHUB_ENV
+        echo "PATH=$PATH:$HOME/Android/Sdk/cmdline-tools/latest/bin:$HOME/Android/Sdk/platform-tools" >> $GITHUB_ENV
 
     - name: Initialize Buildozer
       run: |
-        export ANDROID_SDK_ROOT=$HOME/Android/Sdk
-        export ANDROID_NDK_HOME=$HOME/Android/Sdk/ndk/25.2.9519653
-        buildozer init || true  # Ignore if spec file already exists
+        buildozer init || true  # Ignore if spec file exists
         buildozer android update
 
     - name: Build APK
       run: |
-        export ANDROID_SDK_ROOT=$HOME/Android/Sdk
-        export ANDROID_NDK_HOME=$HOME/Android/Sdk/ndk/25.2.9519653
         buildozer -v android clean
         buildozer -v android debug
 
