--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,19 +59,19 @@ jobs:
         unzip cmdline-tools.zip -d cmdline-tools
         rm cmdline-tools.zip
         mv cmdline-tools/cmdline-tools cmdline-tools/latest
-        
+
         export ANDROID_SDK_ROOT=$HOME/Android/Sdk
         export PATH=$PATH:$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools
-        
+
         # Create repositories.cfg if it doesn't exist
         mkdir -p $HOME/.android
         touch $HOME/.android/repositories.cfg
-        
+
         # Accept licenses non-interactively
         yes | sdkmanager --licenses || true
-        
-        # Install required components
-        sdkmanager "platform-tools" "platforms;android-33" "build-tools;34.0.0"
+
+        # Install required SDK components
+        sdkmanager "platform-tools" "platforms;android-33" "build-tools;36.0.0"
         sdkmanager --install "ndk;25.2.9519653"
         sdkmanager --install "cmake;3.22.1"
 
@@ -83,7 +83,7 @@ jobs:
 
     - name: Initialize Buildozer
       run: |
-        buildozer init || true  # Ignore if spec file exists
+        buildozer init || true
         buildozer android update
 
     - name: Build APK
