--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,97 +1,26 @@
-name: Build APK
-
+name: Build
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
 
 jobs:
-  build-apk:
-    runs-on: ubuntu-latest
+# Build job. Builds app for Android with Buildozer
+build-android:
+  name: Build for Android
+  runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+  steps:
+    - name: Checkout
+      uses: actions/checkout@v2
 
-    - name: Increase swap space
-      run: |
-        sudo fallocate -l 4G /swapfile
-        sudo chmod 600 /swapfile
-        sudo mkswap /swapfile
-        sudo swapon /swapfile
-
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v4
+    - name: Build with Buildozer
+      uses: ArtemSBulgakov/buildozer-action@v1
+      id: buildozer
       with:
-        python-version: "3.10.10"
+        workdir: <specify the directory of the app no don't mention this the app files are in root directory>
+        buildozer_version: stable
 
-    - name: Install system dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y \
-          build-essential \
-          libffi-dev \
-          libssl-dev \
-          openjdk-11-jdk \
-          unzip \
-          zip \
-          zlib1g-dev \
-          libstdc++6 \
-          libsqlite3-dev \
-          libncursesw5-dev \
-          git \
-          python3-venv \
-          cmake \
-          ninja-build
-
-    - name: Install Python dependencies
-      run: |
-        python -m pip install --upgrade pip wheel setuptools
-        pip install buildozer cython==0.29.36
-        pip install python-for-android==2023.9.16
-
-    - name: Setup Android SDK
-      run: |
-        mkdir -p $HOME/Android/Sdk
-        cd $HOME/Android/Sdk
-        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-        unzip cmdline-tools.zip -d cmdline-tools
-        rm cmdline-tools.zip
-        mv cmdline-tools/cmdline-tools cmdline-tools/latest
-
-        export ANDROID_SDK_ROOT=$HOME/Android/Sdk
-        export PATH=$PATH:$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools
-
-        # Create repositories.cfg if it doesn't exist
-        mkdir -p $HOME/.android
-        touch $HOME/.android/repositories.cfg
-
-        # Accept licenses non-interactively
-        yes | sdkmanager --licenses || true
-
-        # Install required SDK components
-        sdkmanager "platform-tools" "platforms;android-33" "build-tools;36.0.0"
-        sdkmanager --install "ndk;25.2.9519653"
-        sdkmanager --install "cmake;3.22.1"
-
-    - name: Configure environment
-      run: |
-        echo "ANDROID_SDK_ROOT=$HOME/Android/Sdk" >> $GITHUB_ENV
-        echo "ANDROID_NDK_HOME=$HOME/Android/Sdk/ndk/25.2.9519653" >> $GITHUB_ENV
-        echo "PATH=$PATH:$HOME/Android/Sdk/cmdline-tools/latest/bin:$HOME/Android/Sdk/platform-tools" >> $GITHUB_ENV
-
-    - name: Initialize Buildozer
-      run: |
-        buildozer android update
-
-    - name: Build APK
-      run: |
-        buildozer -v android clean
-        buildozer -v android debug
-
-    - name: Upload APK artifact
-      uses: actions/upload-artifact@v4
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v2
       with:
-        name: banana-leaf-disease-scanner-apk
-        path: bin/*.apk
+        name: package
+        path: ${{ steps.buildozer.outputs.filename }}
