--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,85 +1,27 @@
-name: Build Android APK
+name: Build
 
 on:
   push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+    branches: [ main, master ]  # Specify your main branches here
 
 jobs:
-  build:
+  build-android:
+    name: Build for Android
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
+      - name: Build with Buildozer
+        uses: ArtemSBulgakov/buildozer-action@v1
+        id: buildozer
+        with:
+          workdir: .  # Since the app files are in the root directory
+          buildozer_version: stable
 
-    - name: Install system dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y \
-          build-essential \
-          git \
-          python3-dev \
-          ffmpeg \
-          libsdl2-dev \
-          libsdl2-image-dev \
-          libsdl2-mixer-dev \
-          libsdl2-ttf-dev \
-          libportmidi-dev \
-          libswscale-dev \
-          libavformat-dev \
-          libavcodec-dev \
-          zlib1g-dev \
-          libgstreamer1.0-dev \
-          libgstreamer-plugins-base1.0-dev
-
-    - name: Install Python dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install buildozer cython
-
-    - name: Convert model to TFLite
-      run: |
-        python convert_to_tflite.py
-
-    - name: Build APK with Buildozer
-      run: |
-        buildozer android debug
-
-    - name: Upload APK artifact
-      uses: actions/upload-artifact@latest  # Changed to latest
-      with:
-        name: banana-leaf-scanner-apk
-        path: bin/*.apk
-
-    - name: Create Release
-      if: github.ref == 'refs/heads/main'
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: v${{ github.run_number }}
-        release_name: Release v${{ github.run_number }}
-        body: |
-          Automated release of Banana Leaf Disease Scanner
-          - Built from commit ${{ github.sha }}
-          - APK ready for download
-        draft: false
-        prerelease: false
-
-    - name: Upload Release Asset
-      if: github.ref == 'refs/heads/main'
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: bin/banana-leaf-scanner-0.1-armeabi-v7a-debug.apk
-        asset_name: banana-leaf-scanner.apk
-        asset_content_type: application/vnd.android.package-archive
+      - name: Upload artifacts
+        uses: actions/upload-artifact@latest  # Use the latest version to avoid deprecation issues
+        with:
+          name: package
+          path: ${{ steps.buildozer.outputs.filename }}
